Added link to home page

--- a/About Us.HTML
+++ b/About Us.HTML
@@ -22,7 +22,7 @@
         <h1 class="header-title">Caribbean STEM Hub</h1>
         <nav>
             <ul>
-                <li><a href="Caribbean STEM Hub.HTML">Home</a></li>
+                <li><a href="index.HTML">Home</a></li>
                 <li><a href="News.html">News</a></li>
                 <li><a href="Article.HTML">Articles</a></li>
                 <li><a href="Research.HTML">Research</a></li>
@@ -55,7 +55,7 @@
                 <ul>
                     <li>Email: <a href="caribbeanstemhub@gmail.com">caribbeanstemhub@gmail.comm</a></li>
                     <li>Phone: +1 (246) 261-0558</li>
-                    <li>Address: Bridgetown, Barbados</li>
+                    <li>Location: Bridgetown, Barbados</li>
                 </ul>
             </section>
             <div class="about-section">
