--- a/index.HTML
+++ b/index.HTML
@@ -37,7 +37,7 @@
         <h1 class="header-title">Caribbean STEM Hub</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.HTML">Home</a></li>
                 <li><a href="News.html">News</a></li>
                 <li><a href="Article.HTML">Articles</a></li>
                 <li><a href="Research.HTML">Research</a></li>
