--- a/About Us.HTML
+++ b/About Us.HTML
@@ -13,6 +13,10 @@
             color:#ffffff;
         }
     </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
     <header style="background-color: #24527a;" >
@@ -53,7 +57,7 @@
                 <p>If you have any questions or would like to get in touch with us, you can reach us using the following contact details:</p>
                 
                 <ul>
-                    <li>Email: <a href="caribbeanstemhub@gmail.com">caribbeanstemhub@gmail.comm</a></li>
+                    <li>Email: <a href="caribbeanstemhub@gmail.com">caribbeanstemhub@gmail.com</a></li>
                     <li>Phone: +1 (246) 261-0558</li>
                     <li>Location: Bridgetown, Barbados</li>
                 </ul>
@@ -61,7 +65,7 @@
             <div class="about-section">
                 <p class="follow-us-text">Follow us at:</p>            
             <div class="social-media">
-                <a href="https://www.facebook.com/profile.php?id=61553083135261" target='_blank'>
+                <a href="https://www.facebook.com/profile.php?id=61554439424864" target='_blank'>
                     <img src="Facebook Icon.png" alt="Facebook">
                 </a>
                 <a href="https://twitter.com/CaribSTEMHub" target='_blank'>  
