--- a/Article.HTML
+++ b/Article.HTML
@@ -22,6 +22,10 @@
         color:#ffffff;
     }
     </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
 
