--- a/Contribute.HTML
+++ b/Contribute.HTML
@@ -13,6 +13,10 @@
             color:#ffffff;
         }
     </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
     <header style="background-color: #24527a;">
@@ -26,7 +30,7 @@
                 <li><a href="News.html">News</a></li>
                 <li><a href="Article.HTML">Articles</a></li>
                 <li><a href="Research.HTML">Research</a></li>
-                <li><a href="Forums.HTML">Forums</a></li>
+                <li><a href="Learn.HTML">Learn</a></li>
                 <li><a href="About Us.HTML">About Us</a></li>
                 <li><a href="Contribute.HTML">Contribute</a></li>
                 <li><a href="Projects.html">Projects</a></li>
@@ -44,7 +48,7 @@
             <h1>Contribute</h1>
             <p class="section-description">
                 Do you have content you'd like to contribute to Caribbean STEM Hub? We welcome your submissions! Please fill out the form below.
-                By submitting content, you agree that it becomes the property of Caribbean STEM Hub.
+                By submitting content, you grant permission for Caribbean STEM Hub to share and showcase it.
             </p>
             <form id="contribute-form" action="submit_content.php" method="post">
                 <div class="form-group">
