--- a/Learn.HTML
+++ b/Learn.HTML
@@ -21,6 +21,10 @@
         color:#ffffff;
     }
 </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
     <header style="background-color: #24527a;">
