--- a/News.html
+++ b/News.html
@@ -16,6 +16,10 @@
             color:#ffffff;
         }
     </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
     <header style="background-color: #24527a;">
@@ -49,7 +53,7 @@
                 Stay updated with the latest STEM news occuring in the Caribbean. Get insights into current developments and events across various STEM disciplines.
             </p>
             <p class="no-content-message">
-                We're looking for passionate individuals to become volunteer reporters and share the latest happenings in STEM across the Caribbean. If you're interested in reporting news, check out the opportunities in our <a href="#contribute">Contribute</a> Section
+                We're looking for passionate individuals to become volunteer reporters and share the latest happenings in STEM across the Caribbean. If you're interested in reporting news, check out the opportunities in our <a href="Contribute.HTML">Contribute</a> Section
             </p>             
             <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
                 <div>
