--- a/Research.HTML
+++ b/Research.HTML
@@ -22,6 +22,10 @@ main {
         color:#ffffff;
     }
 </style> 
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
     <header style="background-color: #24527a;">
@@ -54,7 +58,7 @@ main {
             <h1 class="section-title"> Research Papers</h1>
             <p class="section-description">
                 Explore research papers from various STEM subjects. 
-                At the moment, there are no research papers available. You can make a valuable contribution by submitting your own work through our Contribute section.
+                At the moment, there are no research papers available. You can make a valuable contribution by submitting your own work through our <a href="Contribute.HTML">Contribute</a> section.
             </p>
         </section>
             <!-- Project List -->
