--- a/index.HTML
+++ b/index.HTML
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="E8uL2Xm1U3yb4xHSweKXD5HnT_sg26Ed5YLUatKIjhQ" />
     <title>Caribbean STEM Hub</title>
     <link rel="stylesheet" href="Caribbean STEM Hub.css">
     <link rel="stylesheet" href="Signup.css">
@@ -25,6 +26,10 @@
         color:#ffffff;
     }
 </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
     <header style="background-color: #24527a;">
@@ -58,7 +63,7 @@
             <h1 class="section-title">Featured Content</h1>
             
             <!-- Statement for No Featured Content -->
-            <p class="no-content-message">There is currently no featured content, but exciting updates are on the way! You can contribute by submitting your content via the contribute section.</p>
+            <p class="no-content-message">There is currently no featured content, but exciting updates are on the way! You can contribute by submitting your content via the <a href="Contribute.HTML">Contribute</a> section.</p>
         </section>
     </main>
     <footer>
