--- a/Feedback.html
+++ b/Feedback.html
@@ -17,6 +17,10 @@
             color:#ffffff;
         }
     </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
     
