--- a/Projects.html
+++ b/Projects.html
@@ -16,6 +16,10 @@
             color:#ffffff;
         }
     </style>
+<link rel="icon" href="logo(1).png"
+type="image/x-icon">
+<link rel="shortcut icon"
+href="logo(1).png" type="image/x-icon"
 </head>
 <body>
 
