--- a/About Us.HTML
+++ b/About Us.HTML
@@ -65,8 +65,8 @@ href="logo(1).png" type="image/x-icon"
             <div class="about-section">
                 <p class="follow-us-text">Follow us at:</p>            
             <div class="social-media">
-                <a href="https://www.facebook.com/profile.php?id=61554439424864" target='_blank'>
-                    <img src="Facebook Icon.png" alt="Facebook">
+                <a href="https://www.linkedin.com/company/caribbean-stem-hub/" target='_blank'>
+                    <img src="linkedin.png" alt="linkedin">
                 </a>
                 <a href="https://twitter.com/CaribSTEMHub" target='_blank'>  
                     <img src="X Icon 2.png" alt="X">
