First Article upload

--- a/Explore.HTML
+++ b/Explore.HTML
@@ -170,19 +170,14 @@
             <button onclick="filterContent('showcase')">Showcase</button>
             <button onclick="filterContent('resources')">Resources</button>
             <button onclick="filterContent('STEM Updates')">STEM Updates</button>
-            <button onclick="filterContent('Academic Insights')">Academic Insights</button>
+            <button onclick="filterContent('Academic Research')">Academic Research</button>
             <button onclick="filterContent('Insights')">Insights</button>
         </div>
 
         <h3 class="section-header">Featured</h3>
         <div class="grid">
             <!-- Cards below are commented out for now -->
-            <!--
-            <div class="card">
-                <h3>Project Title 1</h3>
-                <p>Summary of project content. Click to learn more.</p>
-            </div>
-            <div class="card">
+       <!-- <div class="card">
                 <h3>Project Title 2</h3>
                 <p>Summary of project content. Click to learn more.</p>
             </div>
@@ -191,7 +186,10 @@
 
         <h3 class="section-header">Recently Submitted</h3>
         <div class="grid">
-            <!-- Additional cards for recently submitted content -->
+            <div class="card">
+                <h3><a href="articles/article1.html" target="_blank">Blueprint for Ethical AI: The Case for CAARM</a></h3>
+                <p>The Caribbean must adopt ethical AI to address risks and seize opportunities. CAARM can lead this effort through policies, education, and collaboration. Click the title to read more.</p>
+            </div>  
         </div>
     </div>
 
