New update (1st research paper + new member)

--- a/About Us.HTML
+++ b/About Us.HTML
@@ -147,7 +147,7 @@
         <h2 class="section-header">About Us</h2>
         <div class="about-statement">
             <p> The Caribbean STEM Hub is a platform dedicated to celebrating innovation, collaboration, and education in STEM across the Caribbean. 
-               Founded to bridge the gap between opportunities and talent, our mission is to highlight Caribbean achievements in STEM, foster knowledge-sharing, and connect a vibrant community of passionate individuals..
+               Founded to bridge the gap between opportunities and talent, our mission is to highlight Caribbean achievements in STEM, foster knowledge-sharing, and connect a vibrant community of passionate individuals.
             </p>
         </div>
 
@@ -172,9 +172,14 @@
                     <img src="Jahbuki.jpeg" alt="Jahbuki" />
                 </a>                
                 <h3>Jahbuki Reynolds</h3>
-                <p>A dedicated member of the Caribbean STEM Hub's social media team, Jahbuki is a student at Wolmer’s Boys’ School in Jamaica. He is a passionate advocate for STEM with aspirations to become a world-renowned cardiothoracic surgeon.
-
-                </p>
+                <p>A dedicated member of the Caribbean STEM Hub's social media team, Jahbuki is a student at Wolmer’s Boys’ School in Jamaica. He is a passionate advocate for STEM with aspirations to become a world-renowned cardiothoracic surgeon</p>
+            </div>
+            <div class="team-member">
+                <a href="linkedin.com/in/gabrielle-george-756232337" target="_blank">
+                    <img src="No pfp.png" alt="Gabrielle" />
+                </a>                
+                <h3>Gabrielle George</h3>
+                <p>An asping epidemiologist, pursuing a Pharmacy technician course at Distinction college, Gabrielle is a devoted volunteer journalist at the Caribbean STEM Hub who strives to highlight groundbreaking developments and inspiring stories from across the Caribbean STEM landscape. </p>
             </div>
         </div>
 
