--- a/Explore.HTML
+++ b/Explore.HTML
@@ -97,6 +97,7 @@
             padding: 20px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s;
+            align: center;
         }
     
         .card:hover {
@@ -176,18 +177,18 @@
 
         <h3 class="section-header">Featured</h3>
         <div class="grid">
-            <!-- Cards below are commented out for now -->
-       <!-- <div class="card">
-                <h3>Project Title 2</h3>
-                <p>Summary of project content. Click to learn more.</p>
+            
+             <div class="card">
+                <h3><a href="Submitted Content/ChatGPTMaddenGrantJacksonWaite.pdf" target="_blank">ChatGPT and artificial intelligence in higher education in Jamaica: Opportunity or threat? Reviewing stakeholders' perceptions</a></h3>
+                <p>This research explores Jamaican students' and faculty's views on ChatGPT in higher education, highlighting both its advantages and concerns. Click the title to read more.</p>
             </div>
-            -->
+
         </div>
 
         <h3 class="section-header">Recently Submitted</h3>
         <div class="grid">
             <div class="card">
-                <h3><a href="articles/article1.html" target="_blank">Blueprint for Ethical AI: The Case for CAARM</a></h3>
+                <h3><a href="Submitted Content/article1.html" target="_blank">Blueprint for Ethical AI: The Case for CAARM</a></h3>
                 <p>The Caribbean must adopt ethical AI to address risks and seize opportunities. CAARM can lead this effort through policies, education, and collaboration. Click the title to read more.</p>
             </div>  
         </div>
