--- a/index.HTML
+++ b/index.HTML
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Caribbean STEM Hub is a platform dedicated to celebrating innovation, collaboration, and education in STEM across the Caribbean. Founded to bridge the gap between opportunities and talent, our mission is to highlight Caribbean achievements in STEM, foster knowledge-sharing, and connect a vibrant community of passionate individuals.">
     <title>Caribbean STEM Hub</title>
     <link rel="icon" href="logo(1).png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
